media worked product

--- a/src/app/products/clumps-marketing-suite/clumps-marketing-suite.component.html
+++ b/src/app/products/clumps-marketing-suite/clumps-marketing-suite.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<section class="w-full flex flex-col my-10 items-center px-5 mb-5">
-    <div class="w-full flex flex-col md:flex-row justify-between mt-[150px]">
+<section class="w-full flex flex-col my-10 items-center md:px-5 mb-5">
+    <div class="w-full flex flex-col-reverse md:flex-row justify-between mt-[150px] gap-20">
         <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
             <h2 class="text-[45px] md:text-[60px] text-black font-bold">
                 Elevate Your Marketing Campaigns
@@ -58,10 +58,10 @@
 </section>
 <section class="w-full flex flex-col mt-[150px] mb-[100px]">
     <div class="w-full flex flex-col justify-center text-center items-center">
-        <h2 class="text-center text-[50px] font-bold ">
+        <h2 class="text-start md:text-center text-[30px] font-bold ">
             Solving The Customer Engagement Puzzle Across Industries
         </h2>
-        <p class="w-[80%]">
+        <p class="w-full md:w-[80%]">
             Get expert consultation, setup assistance and a 24 x 7 available support. We make sure that the only tough
             part for you is managing sales.
         </p>
@@ -83,18 +83,18 @@
         </button>
     </div>
     <div class="flex flex-col flex-wrap justify-center items-center my-5">
-        <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
+        <div class="w-full md:w-[70%] flex flex-col md:flex-row justify-center items-center">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">360° View of your Customers’ Data on a Single Screen
                 </h2>
                 <p>Leverage user profiles to understand everything from demographic and behavioral data, custom
                     attributes, channel reachability, etc. to run targeted campaigns for the right set of users.</p>
             </div>
-            <img class="w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-1.png" alt=""
+            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-1.png" alt=""
                 srcset="">
         </div>
         <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
-            <img class="w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-2.png" alt=""
+            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-2.png" alt=""
                 srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Personalize your campaigns at scale!</h2>
@@ -102,13 +102,13 @@
                     contextual messages.</p>
             </div>
         </div>
-        <div class="w-full md:w-[70%] flex flex-col-reverse md:flex-row justify-center items-center">
+        <div class="w-full md:w-[70%] flex flex-col md:flex-row justify-center items-center">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Automate your Marketing Campaigns in a Few Simple
                     Clicks .</h2>
                 <p>Create automation workflows within minutes with our intuitive drag-and-drop editor.</p>
             </div>
-            <img class="w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-3.png" alt=""
+            <img class="w-full md:w-[50%]" src="{{hostUrl}}assets/frontent_files/img/product/marketing/marketing-3.png" alt=""
                 srcset="">
         </div>
     </div>
