--- a/src/app/products/crm-plus/crm-plus.component.html
+++ b/src/app/products/crm-plus/crm-plus.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-<section class="w-full flex flex-col my-10 items-center px-5 mb-5">
-  <div class="w-full flex flex-col md:flex-row justify-between mt-[150px]">
+<section class="w-full flex flex-col my-10 items-center md:px-5 mb-5">
+  <div class="w-full flex flex-col-reverse md:flex-row justify-between mt-[150px] gap-20">
     <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
-      <h2 class="text-[45px] md:text-[60px] text-black font-bold">
+      <h2 class="text-[30px] md:text-[50px] text-black font-bold">
         Strengthen Customer Relationships and Drive Sales.
       </h2>
       <p class=" text-[#424040] md:text-[#6b6b84]">
@@ -53,11 +53,11 @@
 
 <section class="w-full flex flex-col justify-center items-center bg-[#000] py-[15px] px-[10px] gap-y-5">
   <div class="w-full">
-    <p class="text-[50px] text-center font-bold text-[#fff]">
+    <p class="text-[30px] md:text-[50px] text-center font-bold text-[#fff]">
       Build excellent customer relationships .
     </p>
   </div>
-  <div class="w-[60%]">
+  <div class="w-full md:w-[60%]">
     <p class="text-[18px] text-center font-bold text-[#00b7ff]">
       Engage with your customers through the right channel at the right time and with the right message. With Clumps CRM
       Plus you can harness the power of omni-channel presence, segmentation, KPIs, predictive intelligence, and more to
@@ -99,11 +99,11 @@
 
 <section class="w-full flex flex-col justify-center items-center bg-[#F4F0EA] py-[15px] px-[10px] gap-y-5">
   <div class="w-full">
-    <p class="text-[50px] text-center font-bold text-[#000]">
+    <p class="text-[30px] md:text-[50px] text-center font-bold text-[#000]">
       Maximum productivity with minimum use .
     </p>
   </div>
-  <div class="w-[60%]">
+  <div class="w-full md:w-[60%]">
     <p class="text-[18px] text-center font-bold text-[#00b7ff]">
       Let's break the myth that CRMs are all about data entry. Clumps CRM plus is built to get more done in less.
       Automate your workflows, processes, campaigns, customer journeys, and more so that you can focus less on software
