--- a/src/app/products/clumps-ecommerce-suite/clumps-ecommerce-suite.component.html
+++ b/src/app/products/clumps-ecommerce-suite/clumps-ecommerce-suite.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<section class="w-full flex flex-col my-10 items-center px-5 mb-5">
-    <div class="w-full flex flex-col md:flex-row justify-between mt-[150px]">
+<section class="w-full flex flex-col my-10 items-center md:px-5 mb-5">
+    <div class="w-full flex flex-col-reverse md:flex-row justify-between mt-[150px] gap-20">
         <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
             <h2 class="text-[45px] md:text-[60px] text-black font-bold">
                 Streamline Your Business Operations
@@ -10,7 +10,7 @@
             </p>
 
         </div>
-        <div class="w-full md:flex md:w-[58%]  justify-center">
+        <div class="w-full md:flex md:w-[58%] justify-center">
             <div class="max-w-md w-full p-6 bg-white rounded-lg shadow-lg">
                 <h2 class="text-[16px] text-[#F0483E] text-center font-semibold mb-4">Get Started With Your Free Trial
                 </h2>
@@ -53,33 +53,33 @@
     </div>
 </section>
 
-<section class="w-full flex flex-col my-10 items-center px-5 mb-5">
-    <div class="w-[80%] text-center  gap-y-3 flex flex-col items-center justify-center">
-        <h2 class="font-bold text-[50px]">Empowering your eCommerce growth</h2>
+<section class="w-full flex flex-col my-10 items-center md:px-5 mb-5">
+    <div class="w-full md:w-[80%] text-center  gap-y-3 flex flex-col items-center justify-center">
+        <h2 class="font-bold text-[50px] text-start md:text-center">Empowering your eCommerce growth</h2>
         <p class="w-[80%] text-center">Our all-in-one platform provides the solutions you need for greater visibility, smarter ad campaigns, and more personalized marketing.</p>
     </div>
-    <div class="w-[80%] flex flex-col my-10 items-center px-5 mb-5">
+    <div class="w-[80%] flex flex-col my-10 items-center md:px-5 mb-5">
         <img class="w-full" src="{{hostUrl}}assets/frontent_files/img/product/ecommerce/ecommerce.png" alt="" srcset="">
     </div>
 </section>
-<section class="w-full flex flex-col justify-center  my-10 items-center px-5 mb-5 gap-y-3">
+<section class="w-full flex flex-col justify-center  my-10 items-center md:px-5 mb-5 gap-y-3">
     <div class="w-full text-center  gap-y-3 flex flex-col items-center justify-center">
         <h2 class="font-bold text-[50px]">Your optimized eCommerce strategy. One click away</h2>
     </div>
-    <div class="w-[80%] flex flex-row justify-center items-start flex-wrap gap-5">
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+    <div class="w-ful md:w-[80%] flex flex-col md:flex-row justify-center items-start flex-wrap gap-5">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">Drive customer engagement</h2>
             <p>Bring products to market fast and in a reliable way across 2,500+ channels worldwide.</p>
         </div>
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">Maximize online visibility</h2>
             <p>Promote your products globally by creating performance-based PPC campaigns across different ad formats and platforms.</p>
         </div>
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">Increase sales on marketplaces</h2>
             <p>Effortlessly integrate, reprice, and optimize your product catalogs to maximize your revenue.</p>
         </div>
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">Get insights from performance data</h2>
             <p>Use your performance data to increase the efficiency of your marketing campaigns and boost online sales.
             </p>
@@ -88,25 +88,25 @@
     </div>
 </section>
 
-<section class="w-full flex flex-col justify-center  my-10 items-center px-5 mb-5 gap-y-3">
+<section class="w-full flex flex-col justify-center  my-10 items-center md:px-5 mb-5 gap-y-3">
     <div class="w-full text-center  gap-y-3 flex flex-col items-center justify-center">
         <h2 class="font-bold text-[50px]">A fully integrated way to market your products online</h2>
         <p>Manage thousands of ads, launch ad campaigns at scale, and integrate with thousands of channels and marketplaces – seamlessly and securely.</p>
     </div>
-    <div class="w-[80%] flex flex-row justify-center items-start flex-wrap gap-5">
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+    <div class="w-full md:w-[80%] flex flex-col md:flex-row justify-center items-start flex-wrap gap-5">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">Feed Management</h2>
             <p>Promote your products across thousands of marketplaces, ad platforms, and price-comparison sites with ready-made feed templates and real-time updates across every channel.</p>
         </div>
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">Marketplace Integration</h2>
             <p>Reach a wider audience by integrating your shop with key digital marketplaces, and automatically update your product listings to target the right shoppers.</p>
         </div>
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">Insights & Analytics</h2>
             <p>Optimize your product listings and ad campaigns with real-time performance data customized to your KPIs, so you can boost conversions and display your brand at its best.</p>
         </div>
-        <div  class="w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[40%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">PPC Optimization</h2>
             <p>Quickly configure, launch, and customize ads, campaigns, and keywords from your product feed — without having to navigate multiple listing requirements or manually update each platform.
             </p>
@@ -114,20 +114,20 @@
 
     </div>
 </section>
-<section class="w-full flex flex-col justify-center  my-10 items-center px-5 mb-5 gap-y-3">
+<section class="w-full flex flex-col justify-center  my-10 items-center md:px-5 mb-5 gap-y-3">
     <div class="w-full text-center  gap-y-3 flex flex-col items-center justify-center">
         <h2 class="font-bold text-[50px]">Purpose-built for eCommerce growth</h2>
     </div>
-    <div class="w-[80%] flex flex-row justify-center items-start flex-wrap gap-5 mt-5">
-        <div  class="w-[30%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+    <div class="w-full md:w-[80%] flex flex-col md:flex-row justify-center items-start flex-wrap gap-5 mt-5">
+        <div  class="w-full md:w-[30%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">For Retailers</h2>
             <p>Sell your products, your way. Import your listings to integrated product feeds, run spot-on ads, and market your products across thousands of digital channels.</p>
         </div>
-        <div  class="w-[30%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[30%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">For Agency</h2>
             <p>Turn your clients’ product information into a powerful experience. Manage everything in-house, from creating PPC campaigns to analyzing your performance data.</p>
         </div>
-        <div  class="w-[30%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
+        <div  class="w-full md:w-[30%] min-h-[250px] flex flex-col text-center border-2 rounded-xl bg-[#C8EBF0] p-4">
             <h2 class="font-bold text-[20px] my-2">For Brands</h2>
             <p>Optimize product data and grow your brand in a seamless way. Launch ad campaigns on key marketplaces, automate workflows, and manage listings in an intuitive feed.</p>
         </div>
