--- a/src/app/products/clumps-systemic-solutions-erp/clumps-systemic-solutions-erp.component.html
+++ b/src/app/products/clumps-systemic-solutions-erp/clumps-systemic-solutions-erp.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<section class="w-full flex flex-col my-10 items-center px-5 mb-5">
-    <div class="w-full flex flex-col md:flex-row justify-between mt-[150px]">
+<section class="w-full flex flex-col my-10 items-center md:px-5 mb-5">
+    <div class="w-full flex flex-col-reverse md:flex-row justify-between mt-[150px] gap-10">
         <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
             <h2 class="text-[45px] md:text-[60px] text-black font-bold">
                 Optimize Retail Operations for Success
@@ -14,7 +14,7 @@
             </p>
 
         </div>
-        <div class="w-full md:flex md:w-[58%]  justify-center">
+        <div class="w-full md:flex md:w-[58%]  justify-center mb-5 md:mb-0">
             <div class="max-w-md w-full p-6 bg-white rounded-lg shadow-lg">
                 <h2 class="text-[16px] text-[#F0483E] text-center font-semibold mb-4">Get Started With Your Free Trial
                 </h2>
@@ -59,8 +59,8 @@
 
 <section>
     <div class="w-full flex flex-col justify-between items-center mt-[100px]">
-        <div class="w-[80%] flex flex-col gap-4 justify-center items-center">
-            <h2 class="text-[50px] font-bold">Why Clumps Systemic Solutions ?</h2>
+        <div class="w-full md:w-[80%] flex flex-col gap-4 justify-center items-center">
+            <h2 class="text-[30px] md:text-[50px] font-bold">Why Clumps Systemic Solutions ?</h2>
             <p>Because we have all in one .</p>
         </div>
         <div class="w-full flex flex-col md:flex-row gap-5 bg-black p-10 rounded-[45px] mt-[50px]">
@@ -167,7 +167,7 @@
             </div>
         </div>
         <div
-            class="w-[80%] flex flex-col md:flex-row  justify-center items-center gap-5 bg-black p-10 rounded-[45px] mt-[50px]">
+            class="w-full md:w-[80%] flex flex-col md:flex-row  justify-center items-center gap-5 bg-black p-10 rounded-[45px] mt-[50px]">
             <div class="flex flex-col w-full md:w-[45%] min-h-[100px] border-b-2 md:border-b-0 md:border-r-2 px-[10px] justify-between items-start"
                 data-aos="flip-up">
                 <p class="text-[#FFF] text-[20px] font-bold">
@@ -207,16 +207,16 @@
 
 <section>
     <div class="w-full flex flex-col justify-center text-center items-center mt-[100px]">
-        <h2 class="text-center text-[50px] font-bold ">
+        <h2 class="text-center text-[30px] md:text-[50px] font-bold ">
             Explore the Clumps Systemic Solutions
         </h2>
-        <p class="w-[80%]">
+        <p class="w-full md:w-[80%]">
             Clumps Systemic Solutions is full of features that help you manage inventory, create and track documents and
             streamline production.
         </p>
     </div>
     <div class="w-full flex flex-col flex-wrap justify-center items-center my-5">
-        <div class="w-full md:w-[90%] flex flex-col-reverse md:flex-row justify-center items-center mt-[50px]">
+        <div class="w-full md:w-[90%] flex flex-col md:flex-row justify-center items-center mt-[50px]">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Production Planning </h2>
                 <p>
@@ -225,7 +225,7 @@
                 </p>
                 <div class="w-full flex flex-row flex-wrap gap-y-2">
                     <h2 *ngFor="let items of Production"
-                        class="w-[48%] flex flex-row text-start text-[20px] font-bold gap-4">
+                        class="w-full md:w-[48%] flex flex-row text-start text-[20px] font-bold gap-4">
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="green"
                                 class="bi bi-check2-circle" viewBox="0 0 16 16" data-aos="zoom-in">
@@ -239,11 +239,11 @@
 
                 </div>
             </div>
-            <img class="w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-1.png" alt=""
+            <img class="w-full md:w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-1.png" alt=""
                 srcset="">
         </div>
         <div class="w-full md:w-[90%] flex flex-col-reverse md:flex-row justify-center items-center mt-[100px]">
-            <img class="w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-2.png" alt=""
+            <img class="w-full md:w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-2.png" alt=""
                 srcset="">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Sales & Purchase</h2>
@@ -269,7 +269,7 @@
             </div>
 
         </div>
-        <div class="w-full md:w-[90%] flex flex-col-reverse md:flex-row justify-center items-center mt-[100px]">
+        <div class="w-full md:w-[90%] flex flex-col md:flex-row justify-center items-center mt-[100px]">
             <div class="flex flex-col justify-center items-start gap-y-5">
                 <h2 class="text-[30px] font-bold text-[#33B5CC]">Inventory Management</h2>
                 <p>
@@ -291,7 +291,7 @@
 
                 </div>
             </div>
-            <img class="w-[40%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-3.png" alt=""
+            <img class="w-full md:w-[48%]" src="{{hostUrl}}assets/frontent_files/img/product/systemic/systemic-3.png" alt=""
                 srcset="">
         </div>
     </div>
