--- a/src/app/products/layouts/contact-us/contact-us.component.html
+++ b/src/app/products/layouts/contact-us/contact-us.component.html
@@ -1,35 +1,35 @@
 <section class="w-full flex flex-col justify-center items-center">
-    <div class="w-[80%] text-center">
+    <div class="w-full md:w-[80%] text-center">
         <p class="font-bold text-[50px]">Get Notified when we launch .</p>
     </div>
     <div class="w-full">
         <div class="bg-[url('http://localhost:4200/assets/frontent_files/img/product/contact-us.png')] bg-auto bg-no-repeat	 text-white text-center py-16 w-full flex justify-end items-end">
-            <form class="w-1/2 ">
-                <div class="flex mb-4">
-                    <div class="w-1/2 mr-2">
-                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">First Name</p>
-                        <input class="w-full px-4 py-2 rounded custom-input" type="text" placeholder="">
+            <form class="w-full md:w-1/2 ">
+                <div class="w-full flex flex-col md:flex-row mb-4">
+                    <div class="w-full md:w-1/2 mr-2">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-1 py-2 md:px-4 md:py-2 ">First Name</p>
+                        <input class="w-full px-1 py-2 md:px-4 md:py-2 rounded custom-input" type="text" placeholder="">
                         <div class="mt-1 border-t"></div>
                     </div>
-                    <div class="w-1/2 ml-2">
-                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Last Name</p>
-                        <input class="w-full px-4 py-2 rounded custom-input" type="text" placeholder="Last Name">
-                        <div class="mt-1 border-t"></div>
-                    </div>
-                </div>
-                <div class="flex mb-4">
-                    <div class="w-1/2 mr-2">
-                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Email</p>
-                        <input class="w-full px-4 py-2 rounded custom-input" type="email" placeholder="Email">
-                        <div class="mt-1 border-t"></div>
-                    </div>
-                    <div class="w-1/2 ml-2">
-                        <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Phone Number</p>
-                        <input class="w-full px-4 py-2 rounded custom-input" type="tel" placeholder="Phone Number">
+                    <div class="w-full md:w-1/2 ml-0 md:ml-2">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-1 py-2 md:px-4 md:py-2 ">Last Name</p>
+                        <input class="w-full px-1 py-2 md:px-4 md:py-2 rounded custom-input" type="text" placeholder="Last Name">
                         <div class="mt-1 border-t"></div>
                     </div>
                 </div>
-                <div class="flex mb-4 ml-2">
+                <div class="w-full flex flex-col md:flex-row mb-4">
+                    <div class="w-full md:w-1/2 mr-2">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-1 py-2 md:px-4 md:py-2 ">Email</p>
+                        <input class="w-full px-1 py-2 md:px-4 md:py-2 rounded custom-input" type="email" placeholder="Email">
+                        <div class="mt-1 border-t"></div>
+                    </div>
+                    <div class="w-full md:w-1/2 ml-0 md:ml-2">
+                        <p class="w-full text-left text-black text-[16px] text-bold px-1 py-2 md:px-4 md:py-2 ">Phone Number</p>
+                        <input class="w-full px-1 py-2 md:px-4 md:py-2 rounded custom-input" type="tel" placeholder="Phone Number">
+                        <div class="mt-1 border-t"></div>
+                    </div>
+                </div>
+                <div class="flex mb-4 ml-0 md:ml-2">
                     <label class="flex items-center mr-4 text-black font-bold">
                         <input type="radio" name="contactMethod" value="whatsapp" class="mr-2">
                         WhatsApp
@@ -43,8 +43,8 @@
                         Call
                     </label>
                 </div>
-                <p class="w-full text-left text-black text-[16px] text-bold px-4 py-2 ">Message</p>
-                <textarea class="w-full px-4 py-2 rounded custom-input"
+                <p class="w-full text-left text-black text-[16px] text-bold px-1 py-2 md:px-4 md:py-2 ">Message</p>
+                <textarea class="w-full px-1 py-2 md:px-4 md:py-2 rounded custom-input"
                     placeholder="How would you like to connect?"></textarea>
                 <div class="mt-4 border-t"></div>
                 <div class="flex justify-end">
