--- a/src/app/products/clumps-marketing-suite/clumps-marketing-suite.component.html
+++ b/src/app/products/clumps-marketing-suite/clumps-marketing-suite.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header logo="Clumps  Marketing Suite"></app-header>
 <section class="w-full flex flex-col my-10 items-center md:px-5 mb-5">
     <div class="w-full flex flex-col-reverse md:flex-row justify-between mt-[150px] gap-20">
         <div class="w-full md:w-[48%] flex flex-col justify-center items-start gap-5 md:mt-5">
