--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -281,5 +281,5 @@
 </section>
 <!-- End How It's Work Area -->
 <section>
-    <app-footer></app-footer>
+    <app-footer class="w-full absolute left-0"></app-footer>
 </section>
