--- a/src/app/products/clumps-ecommerce-suite/clumps-ecommerce-suite.component.html
+++ b/src/app/products/clumps-ecommerce-suite/clumps-ecommerce-suite.component.html
@@ -138,5 +138,5 @@
     <app-contact-us></app-contact-us>
   </section>
   <section>
-    <app-footer></app-footer>
-  </section>
+    <app-footer class="w-full absolute left-0"></app-footer>
+</section>
