--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="navbar bg-base-100 fixed top-0 left-0 z-10 shadow-lg lg:px-20">
-    <div class="navbar-start">
+    <div class="navbar-start w-full md:w-auto">
         <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -25,7 +25,7 @@
                         </ul>
                     </details>
                 </li>
-                <li><a>Blogs</a></li>
+                <!-- <li><a>Blogs</a></li> -->
             </ul>
         </div>
         <a class="cursor-pointer">
@@ -53,9 +53,9 @@
                 </li>
             </ul>
         </div>
-        <div class="w-max">
+        <!-- <div class="w-max">
             <p class="cursor-pointer cool-link">Blog</p>
-        </div>
+        </div> -->
         <!-- <ul class="menu menu-horizontal px-1">
             <li><a>About Us</a></li>
             <li >
