--- a/src/app/pages/services/app-development/app-development.component.html
+++ b/src/app/pages/services/app-development/app-development.component.html
@@ -184,5 +184,5 @@
 <app-contact></app-contact>
 <!-- footer -->
 <section>
-    <app-footer></app-footer>
+    <app-footer class="w-full absolute left-0"></app-footer>
 </section>
