--- a/src/app/pages/services/business-automation/business-automation.component.html
+++ b/src/app/pages/services/business-automation/business-automation.component.html
@@ -239,6 +239,6 @@
 
 <app-contact></app-contact>
 <!-- footer -->
-<section>
-    <app-footer></app-footer>
+<section >
+    <app-footer class="w-full absolute left-0"></app-footer>
 </section>
