--- a/src/app/pages/services/web-development/web-development.component.html
+++ b/src/app/pages/services/web-development/web-development.component.html
@@ -347,5 +347,5 @@
 <app-contact></app-contact>
 <!-- footer -->
 <section>
-    <app-footer></app-footer>
+    <app-footer class="w-full absolute left-0"></app-footer>
 </section>
