--- a/src/app/products/clumps-systemic-solutions-erp/clumps-systemic-solutions-erp.component.html
+++ b/src/app/products/clumps-systemic-solutions-erp/clumps-systemic-solutions-erp.component.html
@@ -300,6 +300,6 @@
 <section>
     <app-contact-us></app-contact-us>
 </section>
-<section>
-    <app-footer></app-footer>
+<section >
+    <app-footer class="w-full absolute left-0"></app-footer>
 </section>
