--- a/src/app/products/crm-plus/crm-plus.component.html
+++ b/src/app/products/crm-plus/crm-plus.component.html
@@ -135,5 +135,5 @@
   <app-contact-us></app-contact-us>
 </section>
 <section>
-  <app-footer></app-footer>
+  <app-footer class="w-full absolute left-0"></app-footer>
 </section>
