--- a/src/app/products/layouts/header/header.component.html
+++ b/src/app/products/layouts/header/header.component.html
@@ -1,6 +1,6 @@
 
 <div class="navbar bg-base-100 fixed top-0 left-0 z-10 shadow-lg lg:px-20">
-    <div class="navbar-start">
+    <div class="navbar-start w-full md:w-auto">
         <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -8,7 +8,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
                 </svg>
             </label>
-            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-[500%]">
                 <li><a [routerLink]="['/about-us']">About US</a></li>
                 <li >
                     <details close >
@@ -26,7 +26,7 @@
                         </ul>
                     </details>
                 </li>
-                <li><a>Blogs</a></li>
+                <!-- <li><a>Blogs</a></li> -->
             </ul>
         </div>
         <a [routerLink]="['/home']" class="cursor-pointer flex flex-nowrap">
@@ -55,9 +55,9 @@
                 </li>
             </ul>
         </div>
-        <div class="w-max">
+        <!-- <div class="w-max">
             <p class="cursor-pointer cool-link">Blog</p>
-        </div>
+        </div> -->
         <!-- <ul class="menu menu-horizontal px-1">
             <li><a>About Us</a></li>
             <li >
