--- a/src/app/products/layouts/header/header.component.html
+++ b/src/app/products/layouts/header/header.component.html
@@ -1,4 +1,3 @@
-
 <div class="navbar bg-base-100 fixed top-0 left-0 z-10 shadow-lg lg:px-20">
     <div class="navbar-start w-full md:w-auto">
         <div class="dropdown">
@@ -8,24 +7,29 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
                 </svg>
             </label>
-            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-[500%]">
-                <li><a [routerLink]="['/about-us']">About US</a></li>
-                <li >
-                    <details close >
-                        <summary>Product</summary>
+            <ul tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-[500%]">
+                <li><a routerLink="/home">Home</a></li>
+                <li><a routerLink="/about-us">About US</a></li>
+                <li>
+                    <details close>
+                        <summary>Products</summary>
                         <ul>
                             <li *ngFor="let item of AllProducts"><a routerLink="/{{item.URL}}">{{item.name}}</a></li>
                         </ul>
                     </details>
                 </li>
                 <li>
-                    <details close >
+                    <details close>
                         <summary>Services</summary>
                         <ul>
                             <li *ngFor="let item of Allservices"><a routerLink="/{{item.URL}}">{{item.name}}</a></li>
                         </ul>
                     </details>
                 </li>
+                <li><a routerLink="/#">Contact US</a></li>
+                <li class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px]"><a href="#">Request a
+                        quote</a></li>
                 <!-- <li><a>Blogs</a></li> -->
             </ul>
         </div>
@@ -35,25 +39,44 @@
         </a>
     </div>
     <div class="hidden lg:w-[50%] lg:flex flex-row flex-nowrap justify-around items-start">
-        <div class="w-max">
-            <a [routerLink]="['/about-us']" ><p class="cursor-pointer cool-link">About Us</p></a>
+        <div class="w-max py-[10px]">
+            <a [routerLink]="['/home']">
+                <p class="cursor-pointer cool-link">Home</p>
+            </a>
         </div>
-        <div class="dropdown">
+        <div class="w-max py-[10px]">
+            <a [routerLink]="['/about-us']">
+                <p class="cursor-pointer cool-link">About Us</p>
+            </a>
+        </div>
+        <div class="dropdown py-[10px]">
             <p tabindex="0" class="cursor-pointer cool-link">Product</p>
-            <ul tabindex="0" class="w-[700px] menu menu-sm dropdown-content drop-shadow-xl rounded-md p-2 z-10 left-[-620px] top-[40px]  bg-[#fff]" >
+            <ul tabindex="0"
+                class="w-[700px] menu menu-sm dropdown-content drop-shadow-xl rounded-md p-2 z-10 left-[-620px] top-[40px]  bg-[#fff]">
                 <!-- <div class="absolute h-[25px] w-[25px] rotate-45 bg-[#fff] top-[-12px] right-5 shadow-xl z-9"></div> -->
-                <li *ngFor="let item of AllProducts" class="p-1 mb-1" >
+                <li *ngFor="let item of AllProducts" class="p-1 mb-1">
                     <a class="hover:link-accent " routerLink="/{{item.URL}}">{{item.name}}</a>
                 </li>
             </ul>
         </div>
-        <div class="dropdown">
-            <p tabindex="0" class="cursor-pointer cool-link">Service</p>
+        <div class="dropdown py-[10px]">
+            <p tabindex="0" class="cursor-pointer cool-link">Services</p>
             <ul class="menu menu-sm dropdown-content shadow-xl rounded-md p-2 z-10 left-[-250px] bg-[#fff]">
                 <li *ngFor="let item of Allservices" class="p-1 mb-1">
                     <a class="hover:link-accent" routerLink="/{{item.URL}}">{{item.name}}</a>
                 </li>
             </ul>
+        </div>
+        <div class="w-max py-[10px]">
+            <a [routerLink]="['/about-us']">
+                <p class="cursor-pointer cool-link">Contact Us</p>
+            </a>
+        </div>
+        <div class="w-max py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px]">
+            <a [routerLink]="['#']">
+                <p class="cursor-pointer cool-link">Request a
+                    quote</p>
+            </a>
         </div>
         <!-- <div class="w-max">
             <p class="cursor-pointer cool-link">Blog</p>
