--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -26,7 +26,7 @@
                         </ul>
                     </details>
                 </li>
-                <li><a routerLink="/#">Contact US</a></li>
+                <li><a routerLink="['/contact-us']">Contact US</a></li>
                 <li class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px]"><a href="#">Request a
                         quote</a></li>
             </ul>
@@ -66,7 +66,7 @@
             </ul>
         </div>
         <div class="w-max py-[10px]">
-            <a [routerLink]="['/about-us']">
+            <a [routerLink]="['/contact-us']">
                 <p class="cursor-pointer cool-link">Contact Us</p>
             </a>
         </div>
