--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -63,7 +63,7 @@
                     © 2023 Clumps Software Solutions. All Rights Reserved.
                 </p>
                 <p >
-                    <a href="http://" class="text-white mt-3 mb-3">Privacy Policy</a>
+                    <a routerLink="/privacy" class="text-white mt-3 mb-3">Privacy Policy</a>
 
                 </p>
             </span>
