--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -27,7 +27,7 @@
                     </details>
                 </li>
                 <li><a routerLink="['/contact-us']">Contact US</a></li>
-                <li class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px]"><a href="#">Request a
+                <li class="py-[10px] px-[15px] border-[1px] border-[#191A23] rounded-[14px]"><a routerLink="['/contact-us']">Request a
                         quote</a></li>
             </ul>
         </div>
